se ha agregao cambios de endospoints y se ha termidado prueba para tipo productos en todas las areas , ademas de hacer cambios en el contenedor de aplicaion